# PrismaEngine

./: .gitignore  BerylEngine.sln  BerylEngine.vcxproj  BerylEngine.vcxproj.filters  CMakeLists.txt  README.md
shaders/: basic.frag  basic.vert  deferred_gbuffer.frag  defines.glsl  screen.vert  wireframe.frag  wireframe.geom
shaders/defines/: structs.glsl
shaders/lighting/: deferred_directionalLight.frag  deferred_pointLight.frag
src/: CMakeLists.txt  GUIRenderer.cpp  GUIRenderer.h  glErrors.cpp  glErrors.h  inputManager.cpp  inputManager.h  main.cpp
src/RHI/: ByteBuffer.cpp  ByteBuffer.h  CMakeLists.txt  FrameBuffer.h  Program.cpp  Program.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  graphics.cpp  graphicsDefs.h
src/RHI/private/: APIHandle.cpp  ByteBuffer.cpp  FrameBuffer.cpp  Program.cpp  Texture.cpp  VertexArray.cpp  graphics.cpp  graphicsDefs.cpp  rhiDefs.cpp  rhiDefs.h  utils.cpp
src/RHI/public/: APIHandle.h  ByteBuffer.h  FrameBuffer.h  Program.h  Texture.h  TypedBuffer.h  VertexArray.h  VertexBufferLayout.h  rhiDefs.h  utils.h
src/core/: ByteBuffer.cpp  ByteBuffer.h  CMakeLists.txt  FrameBuffer.cpp  FrameBuffer.h  Material.cpp  Material.h  Program.cpp  Program.h  StaticMesh.cpp  StaticMesh.h  Texture.cpp  Texture.h  TypedBuffer.h  VertexArray.cpp  VertexArray.h  bufferDefs.cpp  bufferDefs.h  glErrors.cpp  graphics.cpp  graphics.h  graphicsDefs.cpp  utils.cpp  utils.h
src/core/maths/: CMakeLists.txt
src/core/maths/private/: Quaternion.cpp
src/core/maths/public/: Matrix3.h  Matrix4.h  Quaternion.h  Vector2.h  Vector3.h  Vector4.h  mat3f.h  mat4f.h  matrix.h  utils.h  vec2f.h  vec2i.h  vec3f.h  vec4f.h  vector.h
src/core/private/: utils.cpp
src/core/public/: utils.h
src/core/utils/: CMakeLists.txt
src/core/utils/private/: utils.cpp
src/extra/: meshUtilities.cpp  meshUtilities.h
src/geometry/: CMakeLists.txt  StaticMesh.cpp  StaticMesh.h  meshUtilities.cpp  meshUtilities.h
src/geometry/private/: StaticMesh.cpp  meshUtilities.cpp
src/geometry/public/: StaticMesh.h  meshUtilities.h
src/input/: CMakeLists.txt  inputManager.cpp  inputManager.h
src/input/private/: inputManager.cpp
src/input/public/: inputManager.h
src/rendering/: CMakeLists.txt  Material.cpp  Material.h  MeshRenderer.h
src/rendering/private/: GUIRenderer.cpp  Material.cpp  MeshRenderer.cpp
src/rendering/public/: GUIRenderer.h  Material.h  MeshRenderer.h  shaderDefs.h
src/scene/: CMakeLists.txt  Camera.cpp  Camera.h  Object.cpp  Object.h  PointLight.cpp  PointLight.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  SceneView.cpp  SceneView.h  shaderDefs.h
src/scene/components/: MeshRenderer.cpp  MeshRenderer.h  Transform.cpp  Transform.h
src/scene/private/: Camera.cpp  DirectionalLight.cpp  PointLight.cpp  Scene.cpp  SceneObject.cpp  SceneView.cpp  Transform.cpp
src/scene/public/: Camera.h  DirectionalLight.h  PointLight.h  Scene.h  SceneObject.h  SceneView.h  Transform.h  shaderDefs.h
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt
tests/core/maths/: CMakeLists.txt
tests/core/maths/matrix/: CMakeLists.txt  matrix3f_tests.cpp
tests/core/maths/quaternion/: CMakeLists.txt  quaternion_tests.cpp
tests/core/maths/utils/: CMakeLists.txt  utils_tests.cpp
tests/core/maths/vector/: CMakeLists.txt  vector2i_tests.cpp  vector3f_tests.cpp
tests/matrices/: CMakeLists.txt  matrix3f_tests.cpp  matrix4f_tests.cpp
tests/transform/: CMakeLists.txt  transform_tests.cpp
tests/vectors/: CMakeLists.txt  vector2f_tests.cpp  vector2i_tests.cpp  vector3f_tests.cpp  vector4f_tests.cpp
